spec files for home and image service, image model class are added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<div class="gallery-wrapper"><h3>{{ message }}</h3>
-    <div>{{ message }}</div>
+<h3>{{ message }}</h3>
+<div>{{ message }}</div>
+<img src="../../assets/images/1.png" alt="image.name"/>
+<div class="image-container-wrapper">
+    <div class="image-container">
+
+        <div class="image-wrapper" *ngFor="let image of images">
+            <img [src]="image.url" [alt]="image.name"/>
+        </div>
+    </div>
 </div>
