basic layout for heroes in desktop and tablet

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,14 @@ h2 {
     display: none;
   }
 }
+
+img {
+  width: 100vw;
+  height: 30vh;
+  //@include  mq($from: mobile){
+  //  height: 10em;
+  //}
+  //@include  mq($from: tablet){
+  //  height: 25em;
+  //}
+}
