--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<h3>{{ message }}</h3>
-<div>{{ message }}</div>
-<img src="../../assets/images/1.png" alt="image.name"/>
+<!--<h3>{{ // message }}</h3>-->
+<!--<div>{{ message }}</div>-->
+
 <div class="image-container-wrapper">
     <div class="image-container">
 
