--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,7 @@
+@import "~sass-mq";
+//$mq-responsive:        false;
+//$mq-static-breakpoint: desktop;
+
 .image-container-wrapper {
   display: flex;
   justify-content: center;
@@ -6,11 +10,48 @@
 .image-container {
   display: flex;
   flex-direction: row;
-  width: 80em;
+
   justify-content: center;
   flex-wrap: wrap;
+  @include mq($from: desktop) {
+    width: 66em;
+  }
+  @include mq(tablet) {
+    width: 60em;
+    justify-content: space-evenly;
+  }
 }
 
 .image-wrapper {
+  @include mq($until: tablet) {
+    padding: 0em 3em;
+    flex-direction: row;
+    align-items: center;
+  }
   padding: 4em 5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  //border: 1px solid darkgrey;
+
+  //border-radius: 14px;
+
+  @include mq(tablet,desktop) {
+    margin: 2em 3.5em;
+  }
+  @include mq(desktop) {
+    margin: 1em;
+    padding: 1em 3em;
+  }
+}
+
+.details {
+  padding-top: .5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include mq(mobile) {
+    padding-left: 1em;
+  }
 }
