--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <!--<h3>{{ // message }}</h3>-->
 <!--<div>{{ message }}</div>-->
 
+<input [(ngModel)]="queryString">
 <div class="image-container-wrapper">
     <div class="image-container">
 
-        <div class="image-wrapper" *ngFor="let image of images; let i=index">
+        <div class="image-wrapper"
+             *ngFor="let image of images | filter: queryString | paginate: { itemsPerPage: 10, currentPage: p,totalItems: 151 }; let i=index">
             <img [src]="image.url" [alt]="image.name"/>
             <div class="details">
                 <label>#<strong>{{i+1}}</strong></label>
@@ -15,6 +17,8 @@
 </div>
 <mat-paginator [length]="length"
                [pageSize]="pageSize"
-               [pageSizeOptions]="pageSizeOptions"
-               (page)="pageEvent = $event">
+
+               (page)="onPageChange($event)">
 </mat-paginator>
+
+<pagination-controls (pageChange)="onPageChange($event)"></pagination-controls>
