--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,6 +5,8 @@
 .image-container-wrapper {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .image-container {
@@ -36,7 +38,7 @@
 
   //border-radius: 14px;
 
-  @include mq(tablet,desktop) {
+  @include mq(tablet, desktop) {
     margin: 2em 3.5em;
   }
   @include mq(desktop) {
@@ -54,4 +56,12 @@
   @include mq(mobile) {
     padding-left: 1em;
   }
+}
+
+.search-box {
+  width: 15em;
+  align-self: center;
+}
+.pagination-ctrl{
+  align-self: center;
 }
