--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<!--<h3>{{ // message }}</h3>-->
-<!--<div>{{ message }}</div>-->
+
 
 <div class="image-container-wrapper">
     <!--<input [(ngModel)]="queryString" type="text" name="search" class="search-box">-->
@@ -8,13 +7,18 @@
         <mat-hint>Search for a hero</mat-hint>
     </mat-form-field>
 
-    <!--<mat-form-field appearance="outline">-->
-    <!--<mat-label>Outline form field</mat-label>-->
-    <!--<input matInput placeholder="Placeholder">-->
-    <!--<mat-hint>Hint</mat-hint>-->
-    <!--</mat-form-field>-->
-
-    <div class="image-container">
+    <div *ngIf="loading"><!--  app.component.html -->
+        <circle-progress
+                [percent]="85"
+                [radius]="100"
+                [outerStrokeWidth]="16"
+                [innerStrokeWidth]="8"
+                [outerStrokeColor]="'#78C000'"
+                [innerStrokeColor]="'#C7E596'"
+                [animation]="true"
+                [animationDuration]="300"
+        ></circle-progress></div>
+    <div class="image-container" *ngIf="!loading">
 
         <div class="image-wrapper"
              *ngFor="let image of images | filter: queryString | paginate: { itemsPerPage: 20, currentPage: p,totalItems: 151 }">
@@ -25,12 +29,9 @@
             </div>
         </div>
     </div>
-    <pagination-controls class="pagination-ctrl" (pageChange)="onPageChange($event)"></pagination-controls>
+    <pagination-controls
+            class="pagination-ctrl"
+            (pageChange)="onPageChange($event)"
+            previousLabel=""
+            nextLabel=""></pagination-controls>
 </div>
-<!--<mat-paginator [length]="length"-->
-               <!--[pageSize]="pageSize"-->
-<!---->
-               <!--(page)="onPageChange($event)">-->
-<!--</mat-paginator>-->
-
-
