progress-spinner modified

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                 [animation]="true"
                 [animationDuration]="15000"
                 [showSubtitle]="true"
-                subtitle="Fetching data from server"
+                subtitle="Fetching data from pokemon server"
         >Fetching data</circle-progress></div>
     <div class="image-container" *ngIf="!loading">
 
